--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,15 @@
 
-h1{
+/*h1{
     text-align: center;
     font-family: 'Poppins';
-}
+}*/
 #banner{
     width: 100%;
     height: 250px;
     object-fit: cover;
     font-family: 'Poppins';
 }
+/*
 h3{
     text-align: center;
     font-weight: normal;
@@ -21,6 +22,7 @@ h2{
     font-weight: normal;
     color: rgb(100, 100, 100);
 }
+/*
 .bodytext{
     font-family: 'Roboto';
     color: rgb(80, 80, 80);
@@ -28,4 +30,4 @@ h2{
 #container{
     max-width: 720px;
     margin: 0 auto 0 auto;
-}
+} */
