--- a/templates/home.html
+++ b/templates/home.html
@@ -4,29 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jovian Careers</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
-   
+--> 
+
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
+    <link rel="stylesheet" href="/static/style.css">
+
 </head>
 <body>
-    <div id="container">
-        <h1>Jovian Careers</h1>
-        <h3>Building bridges, connecting You</h3>
-        <img src="/static/nairobi kenya highway.jpg" id="banner">
+    <div class="container">
+        <h1 class="text-center mt-2">Jovian Careers</h1>
+        <figure class="text-center">
+            <p class="blockquote">Building bridges, connecting You</p>
+        </figure>
+            
+        <img class="img-fluid" src="/static/nairobi kenya highway.jpg" id="banner">
 
-        <h2>About Jovian</h2>
-        <p class="bodytext">Welcome to Jovian Careers LTD, your trusted partner in bridging the gap between talent and opportunity. Founded right here in Kenya, we are passionate about empowering individuals by connecting them with meaningful employment opportunities. Our mission is simple: to transform lives through career advancement.</p>
+        <h2 class="text-center mt-2 mb-4">About Jovian</h2>
+        <p class=" lead bodytext">Welcome to Jovian Careers LTD, your trusted partner in bridging the gap between talent and opportunity. Founded right here in Kenya, we are passionate about empowering individuals by connecting them with meaningful employment opportunities. Our mission is simple: to transform lives through career advancement.</p>
         
-        <h2>Open Positions</h2>
-        <p class="bodytext">TODO -show jobs here</p>
+        <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+        <p class="text-center">TODO -show jobs here</p>
 
-        <div style="text-align: center;"><button>Contact Us</button></div>
+        <div class="text-center">
+            <button type="button" class="btn btn-primary btn-lg">Contact Us</button>
+            <p class="mt-4">Copytight 2024, Jovian kenya</p>
+        </div>
     </div>
    
 
