--- a/templates/jobitems.html
+++ b/templates/jobitems.html
@@ -14,7 +14,7 @@
         {% endif %}
     </div>
     <div class="col-3">
-        <button type="button" class="btn btn-outline-primary">Apply</button>
+        <a href="mailto:dawaearlke@gmail.com?subject=Apllication%20for%20{{job['title']}}&body=My%20name%3A%20%3Cyour%20name%3E%0D%0A%0D%0AMy%20resume%20link%3A%20%3Cresume%20link%3E%0D%0A%0D%0AMy%20LinkedIn%20link%3A%20%3Clinkedin%20link%3E" type="button" class="btn btn-outline-primary">Apply</a>
     </div>
     
 </div>
